--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="award">
                             <p><strong>2023-NOV</strong></p>
                             <p>
-                                <strong><a href="https://music.uwo.ca/news/2023/young-ja-park-chamber-music-award-winners.html">Young-Ja Park Chamber Music Award</a></strong><br/>
+                                <strong><a target="_blank" href="https://music.uwo.ca/news/2023/young-ja-park-chamber-music-award-winners.html">Young-Ja Park Chamber Music Award</a></strong><br/>
                                 Awarded annually to full-time Don Wright Faculty of Music graduate and/or undergraduate students performing in a Chamber Music group, with a minimum 70% average, who are being recognized as members of the most promising Chamber Music Group, and exemplify excellence in performance and collaborative work throughout the fall term.
                             <br/></p>
                         </div>
@@ -115,7 +115,7 @@
                             <br/></p>
                         </div>
                         <div class="award">
-                            <p><strong>2020-SEP</strong></p>
+                            <p><strong>2020-Sep</strong></p>
                             <p>
                                 <strong>Music Entrance Scholarship of Merit</strong><br/>
                                 Awarded to full-time students entering the first year of undergraduate studies in the Don Wright Faculty of Music, based on a combination of performance audition and academic excellence.
@@ -261,9 +261,10 @@
             </div>
             <div id="watchlisten" class="dark">
                 <!-- Watch & Listen -->
-                <div class="content">
-                    <h1>WATCH / LISTEN</h1>
+                <div style="margin-left: 6rem; margin-right: 6rem; font-size: 1rem; font-family: 'Gothic A1'; width: 100%;">
+                    <h1 style="font-size: 4rem; margin-top: 3.7rem; margin-bottom: 1.5rem;">WATCH / LISTEN</h1>
                     <div class="media">
+                        <iframe src="https://www.youtube.com/embed/8ZLxkk6dRZ0?si=JJNM9rsk4GYzv75a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <iframe src="https://www.youtube.com/embed/SXZD7IMNGvY?si=enos1Qets-dt-mU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <iframe src="https://www.youtube.com/embed/xTOaaod2Tu8?si=ZdEWLsdsW7xPW181" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
@@ -294,18 +295,19 @@
                                 </p>
                                 <h3><strong>EXCERPTS</strong><br/></h3>
                                 <p>
-                                    • <em>A Canticle for Ryan</em>, Michael Conway Baker<br/>
-                                    • <em>Concerto</em>, Aaron Copland<br/>
-                                    • <em>Syrinx</em>, Claude Debussy<br/>
-                                    • <em>4 Fantasiestücke (Fantasy Pieces), Op. 43</em>, Niels Gade<br/>
-                                    • <em>Suite Hébraïque</em>, Srul Irving Glick<br/>
-                                    • <em>Sonata da camera</em>, Paul Harris<br/>
-                                    • <em>Hommage à Zoltán Kodály</em>, Béla Kovács<br/>
-                                    • <em>Sonata No. 1</em>, Jean-Xavier Lefèvre<br/>
-                                    • <em>Rhapsody for Clarinet</em>, Willson Osborne<br/>
-                                    • <em>Solo de Concours</em>, Henri Rabaud<br/>
-                                    • <em>Three Intermezzi</em>, Charles Villiers Stanford<br/>
-                                    • <em>Concertino</em>, Giuseppe Tarini<br/>
+                                    • <em>Symphony No. 6</em>, Ludwig van Beethoven<br/>
+                                    • <em>Symphony No. 8</em>, Ludwig van Beethoven<br/>
+                                    • <em>Symphony No. 3</em>, Johannes Brahms<br/>
+                                    • <em>Rhapsody in Blue</em>, George Gershwin<br/>
+                                    • <em>Dances of Galanta</em>, Zoltán Kodály<br/>
+                                    • <em>Scherzo from A Midsummer Night’s Dream</em>, Felix Mendelssohn<br/>
+                                    • <em>Symphony No. 3</em>, Felix Mendelssohn<br/>
+                                    • <em>Clarinet Concerto in A major, K. 622</em>, Wolfgang Amadeus Mozart<br/>
+                                    • <em>Peter and the Wolf</em>, Sergei Prokofiev<br/>
+                                    • <em>Capriccio Espagnol</em>, Nikolai Rimsky-Korsakov<br/>
+                                    • <em>Unfinished Symphony</em>, Franz Schubert<br/>
+                                    • <em>Firebird Variation (1945)</em>, Igor Stravinsky<br/>
+                                    • <em>Symphony No. 5</em>, Peter Tchaikovsky<br/>
                                 </p>
                             </div>
                             <div>
@@ -334,7 +336,7 @@
                     <div>
                         <h1>CONTACT</h1>
                     </div>
-                    <div>
+                    <div style="display:flex; flex-direction: column; align-items: center; width: 100%; height: 40%; justify-content: center;">
                         <p>For inquiries about teaching, please feel free to contact me if you are interested in taking lessons, learning about the process, or are just curious about learning clarinet, piano and/or theory.
                             Online and in-person lessons are available.</p>
                         <p>To inquire about working with me, please contact <a style="color:aqua" href="mailto:zheng_harry@outlook.com">zheng_harry@outlook.com</a></p>
