Added CV preview

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                         <br/><br/>
                         With an extensive range of solo, orchestral, and chamber performance experiences, combined with his passion to advocate for music education, the synergy between performance and pedagogy continues to shape his approach to music.
                     </p>
-                    <a class="cv" href="Harry Zheng's Music CV.docx.pdf" download="HARRY ZHENG CV"><i class="fa fa-download" style="margin-right: 0.5rem"></i>Download CV</a>
+                    <a class="cv" href="Harry Zheng's Music CV.docx.pdf" target="_blank"><i class="fa fa-eye" style="margin-right: 0.5rem"></i>Preview CV</a>
+                    <a style="margin-left: 1rem" class="cv" href="Harry Zheng's Music CV.docx.pdf" download="HARRY ZHENG CV"><i class="fa fa-download" style="margin-right: 0.5rem"></i>Download CV</a>
                 </div>
                 <div class="image-box"><img src="Bio.png"></div>
             </div>
