Reformatting Watch section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h1>BIOGRAPHY</h1>
                     <p class="bio">
                         Harry Zheng is a highly dedicated and passionate musician, striving to become a professional clarinetist and educator.
-                        Currently a fourth-year performance major at the Don Wright Faculty Music from Western University in London, Ontario, he has gained numerous performance, teaching, and research opportunities as a student of Dr. Jana Starling.
+                        Currently a fourth-year performance major at the Don Wright Faculty of Music from Western University in London, Ontario, he has gained numerous performance, teaching, and research opportunities as a student of Dr. Jana Starling.
                         In recent years, Harry has performed with the Symphonic Band, Wind Ensemble, and Opera during his time at Western University, and was also appointed Principal Clarinet with the Mississauga Symphony Youth Orchestra.
                         In addition, he has worked with Dr. Starling on a variety of tasks such as data entry for the ICA, administrative support with creating programs, and aiding with co-hosting residency guests at the music department.
                         <br/><br/>
@@ -116,7 +116,7 @@
                             <br/></p>
                         </div>
                         <div class="award">
-                            <p><strong>2020-Sep</strong></p>
+                            <p><strong>2020-SEP</strong></p>
                             <p>
                                 <strong>Music Entrance Scholarship of Merit</strong><br/>
                                 Awarded to full-time students entering the first year of undergraduate studies in the Don Wright Faculty of Music, based on a combination of performance audition and academic excellence.
@@ -260,15 +260,16 @@
                 </div>
                 <div class="image-box"><img src="Perform.png"></div>
             </div>
-            <div id="watchlisten" class="dark">
+            <div id="watchlisten" class="dark" style="flex-direction: column;">
                 <!-- Watch & Listen -->
-                <div style="margin-left: 6rem; margin-right: 6rem; font-size: 1rem; font-family: 'Gothic A1'; width: 100%;">
+                <div class="content">
                     <h1 style="font-size: 4rem; margin-top: 3.7rem; margin-bottom: 1.5rem;">WATCH / LISTEN</h1>
-                    <div class="media">
-                        <iframe src="https://www.youtube.com/embed/8ZLxkk6dRZ0?si=JJNM9rsk4GYzv75a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <iframe src="https://www.youtube.com/embed/SXZD7IMNGvY?si=enos1Qets-dt-mU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <iframe src="https://www.youtube.com/embed/xTOaaod2Tu8?si=ZdEWLsdsW7xPW181" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
+                </div>
+                <div style="margin-left: 6rem; margin-right: 6rem; font-size: 1rem; font-family: 'Gothic A1'; width: 100%; height:40%; padding-top:2rem">
+                    
+                    <iframe style="width:30%; height:100%" src="https://www.youtube.com/embed/8ZLxkk6dRZ0?si=JJNM9rsk4GYzv75a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe style="width:30%; height:100%" src="https://www.youtube.com/embed/SXZD7IMNGvY?si=enos1Qets-dt-mU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe style="width:30%; height:100%" src="https://www.youtube.com/embed/xTOaaod2Tu8?si=ZdEWLsdsW7xPW181" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
             <div id="repertoire" class="light">
